fixed overlapping issue in main container

--- a/src/styles.css
+++ b/src/styles.css
@@ -46,3 +46,6 @@
     float:none;
     margin-left:5px;
 }
+#main-container {
+    padding-top:100px;
+}
